<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.nativead.NativeAdView
    android:id="@+id/adView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/native_ad_height"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/side_ad_picture_height"
        android:layout_gravity="top|end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp">

        <ImageView
            android:layout_width="@dimen/side_ad_picture_height"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/ad_choices_margin"
            android:src="@drawable/ad_choices_icon" />

        <ImageView
            android:layout_width="@dimen/ad_badge_width"
            android:layout_height="match_parent"
            android:src="@drawable/ad_badge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_ad_text_margin"
            android:layout_marginTop="@dimen/top_ad_text_margin"
            android:layout_marginEnd="@dimen/side_ad_text_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/adIcon"
                android:layout_width="@dimen/ad_icon_size"
                android:layout_height="@dimen/ad_icon_size"
                android:layout_gravity="bottom"
                app:cardBackgroundColor="@color/gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_ad_side_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/headText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/website_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/head_ad_text_size" />

                <TextView
                    android:id="@+id/bodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/lorem_ipsum_ad"
                    android:textColor="@color/black"
                    android:textSize="@dimen/body_ad_text_size" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/installBtn"
            style="@style/BaseMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/install_ad_height"
            android:layout_marginStart="@dimen/install_btn_side_margin"
            android:layout_marginTop="@dimen/install_btn_vertical_margin"
            android:layout_marginEnd="@dimen/install_btn_side_margin"
            android:layout_marginBottom="@dimen/install_btn_vertical_margin"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="0"
            android:text="@string/install"
            android:textColor="@color/black"
            android:textSize="@dimen/install_ad_text_size" />

    </LinearLayout>

</com.google.android.gms.ads.nativead.NativeAdView>